extracted data from pdf files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,16 @@
 [project]
 name = "rag"
 version = "0.1.0"
-description = "Add your description here"
+description = "RAG application using LangChain, Flask, and Pinecone"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.10"
+dependencies = [
+    "langchain==0.3.26",
+    "flask==3.1.1",
+    "sentence-transformers==4.1.0",
+    "pypdf==5.6.1",
+    "python-dotenv==1.1.0",
+    "langchain-pinecone==0.2.8",
+    "langchain-openai==0.3.24",
+    "langchain-community==0.3.26"
+]
