--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,11 @@ dependencies = [
     "python-dotenv==1.1.0",
     "langchain-pinecone==0.2.8",
     "langchain-openai==0.3.24",
-    "langchain-community==0.3.26"
+    "langchain-community==0.3.26",
+    "ipykernel>=6.30.0",
+    "langchain-core>=0.3.72",
+    "langchain-google-genai>=2.1.8",
+    "huggingface-hub>=0.34.3",
+    "pinecone>=5.0.0",
+    "langchain-huggingface>=0.3.1",
 ]
